start working with main

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,700&display=swap" rel="stylesheet">
     <!-- semi-bold, bold -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="">
     <!-- semi-bold, bold -->
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -16,13 +17,13 @@
 <body>
     <div class="mainContainer">
         <header>
-            <div id="logo">BestShop</div>
+            <div id="logo"><a href="#">BestShop</a></div>
             <nav class="top_menu">
                 <ul>
-                    <li><a href="#"></a>why us</li>
-                    <li><a href="#"></a>benefits</li>
-                    <li><a href="#"></a>prices</li>
-                    <li><a href="#"></a>contact</li>
+                    <li><a href="#main">why us</a></li>
+                    <li><a href="#benefits">benefits</a></li>
+                    <li><a href="#prices">prices</a></li>
+                    <li><a href="#contact">contact</a></li>
                 </ul>
             </nav>
         </header>
