start working with main

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="main">
             <h1>Sell more!</h1>
             <p>Open shop on our platform and increase your sales</p>
-            <button class="slider_button"></button>
+            <a href=""><button class="slider_button">open your shop</button></a>
         </section>
         <section class="benefits"></section>
         <section class="prices"></section>
