start working with why_us id

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="logo"><a href="#">BestShop</a></div>
             <nav class="top_menu">
                 <ul>
-                    <li><a href="#main">why us</a></li>
+                    <li><a href="#why_us">why us</a></li>
                     <li><a href="#benefits">benefits</a></li>
                     <li><a href="#prices">prices</a></li>
                     <li><a href="#contact">contact</a></li>
@@ -28,15 +28,20 @@
             </nav>
         </header>
 
-        <section class="main">
+        <section id="main">
             <h1>Sell more!</h1>
             <p>Open shop on our platform and increase your sales</p>
             <a href=""><button class="slider_button">open your shop</button></a>
         </section>
-        <section class="benefits"></section>
-        <section class="prices"></section>
-        <section class="contact"></section>
+        <section id="why_us">
+            <h2>The most popular sales platform in country</h2>
 
+    </div>
+    </section>
+    <section id="benefits"></section>
+    <section id="prices"></section>
+    <section id="contact"></section>
+    <footer></footer>
     </div>
 </body>
 
