--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,700&display=swap" rel="stylesheet">
     <!-- semi-bold, bold -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="">
-    <!-- semi-bold, bold -->
+    <link rel="icon" href="img/favicon.png">
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -27,21 +26,173 @@
                 </ul>
             </nav>
         </header>
-
         <section id="main">
-            <h1>Sell more!</h1>
+            <h1>sell more!</h1>
             <p>Open shop on our platform and increase your sales</p>
             <a href=""><button class="slider_button">open your shop</button></a>
         </section>
         <section id="why_us">
             <h2>The most popular sales platform in country</h2>
+            <ul>
+                <li>
+                    <div class="why_us-icons first-circle"></div>
+                    <p>100000</p>
+                    <p>daily entries</p>
+                </li>
+                <li>
+                    <div class="why_us-icons second-circle"></div>
+                    <p>200000</p>
+                    <p>seen product every day</p>
+                </li>
+                <li>
+                    <div class="why_us-icons third-circle"></div>
 
-    </div>
-    </section>
-    <section id="benefits"></section>
-    <section id="prices"></section>
-    <section id="contact"></section>
-    <footer></footer>
+                    <p>10000</p>
+                    <p>added posts daily</p>
+                </li>
+            </ul>
+        </section>
+
+
+        <section id="benefits">
+            <div class="benefits_first">
+                <div class="benefits_f_lc">
+                    <h2>be always first</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil iusto nulla, culpa repudiandae
+                        aliquid
+                        ipsam reprehenderit veniam aut suscipit nobis.</p>
+                    <hr />
+                </div>
+                <div class="benefits_f_rc">
+                    <img src="./img/macbook.png" alt="macbook" class="macbook_img">
+                </div>
+            </div>
+            <div class="benefits_second">
+                <div class="benefits_s_lc">
+                    <img src="./img/iphone.png" alt="iphone" class="iphone_img">
+                </div>
+                <div class="benefits_s_rc">
+                    <h2>your shop is where you are!</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim aliquid voluptate repellat in
+                        labore distinctio, veniam culpa non. </p>
+                    <hr />
+                </div>
+            </div>
+            <div class="benefits_third">
+                <div class="benefits_t_lc">
+                    <h2>Increase recognition your brand!</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis velit fuga nemo consequatur porro
+                        corrupti rerum, soluta molestiae tempora, modi. Dolor sit amet consectetur adipisicing elit.</p>
+                    <hr />
+                </div>
+                <div class="benefits_t_rc">
+                    <img src="./img/trumpet.png" alt="trumpet" class="trumpet_img">
+                </div>
+            </div>
+        </section>
+
+
+        <section id="prices">
+            <h2>Pricing</h2>
+            <div class="prices_options">
+                <div class="prices_first">
+                    <p>basic</p>
+                    <p>$0</p>
+                    <ul class="price_list">
+                        <li><img src="./img/chechmark-1.svg" alt="checkmark" class="checkmark_list">100 MB HDD</li>
+                        <li><img src="./img/chechmark-1.svg" alt="checkmark" class="checkmark_list">1 Subdomain
+                        </li>
+                        <li><img src="./img/chechmark-1.svg" alt="checkmark" class="checkmark_list">2 E-mails</li>
+                        <li><img src="./img/close.svg" alt="unavailable" class="checkmark_list">Two years
+                            license
+                        </li>
+                        <li><img src="./img/close.svg" alt="unavailable" class="checkmark_list">Full support
+                        </li>
+                    </ul>
+                </div>
+                <div class="prices_second">
+                    <p>professional</p>
+                    <p>$25</p>
+                    <p>Limited offer</p>
+                    <ul class="price_list">
+                        <li><img src="./img/chechmark-1.svg" alt="checkmark" class="checkmark_list">500 MB HDD</li>
+                        <li><img src="./img/chechmark-1.svg" alt="checkmark" class="checkmark_list">2 Subdomains
+                        </li>
+                        <li><img src="./img/chechmark-1.svg" alt="checkmark" class="checkmark_list">5 E-mails</li>
+                        <li><img src="./img/chechmark-1.svg" alt="checkmark" class="checkmark_list">One year
+                            license
+                        </li>
+                        <li><img src="./img/close.svg" alt="unavailable" class="checkmark_list">Full support
+                        </li>
+                    </ul>
+                </div>
+                <div class="prices_third">
+                    <p>premium</p>
+                    <p>$60</p>
+                    <p>Limited offer</p>
+                    <ul class="price_list">
+                        <li><img src="./img/chechmark-1.svg" alt="checkmark" class="checkmark_list">2 GB HDD</li>
+                        <li><img src="./img/chechmark-1.svg" alt="checkmark" class="checkmark_list">5 Subdomains
+                        </li>
+                        <li><img src="./img/chechmark-1.svg" alt="checkmark" class="checkmark_list">20 E-mails</li>
+                        <li><img src="./img/chechmark-1.svg" alt="checkmark" class="checkmark_list">Two years
+                            license
+                        </li>
+                        <li><img src="./img/chechmark-1.svg" alt="checkmark" class="checkmark_list">Full support
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact">
+            <div class="contact_info">
+                <h1>any questions?</h1>
+                <p>leave your email address or call us!</p>
+                <ul>
+                    <li><img src="./img/mail_icon.svg" alt="mail" class="contact_icons">info@bestshop.xyz</li>
+                    <li><img src="./img/phone_icon.svg" alt="mail" class="contact_icons">123 456 789</li>
+                </ul>
+            </div>
+            <div class="contact_form">
+                <form action="">
+
+                    <label for="login" class="label_title">name</label><br>
+                    <input type="text" class="input_field" name="login" placeholder="" required><br>
+
+                    <label for="email" class="label_title">email</label><br>
+                    <input type="email" class="input_field" name="password" placeholder="" required><br>
+
+                    <input type="checkbox" class="checkbox_button">
+                    <p class="terms">I hereby give consent for my personal data included in my application to be
+                        processed for the
+                        purposes of the recruitment process under the European Parliament’s and Council of the European
+                        Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the
+                        processing of personal data and on the free movement of such data, and repealing Directive
+                        95/46/EC (Data Protection Directive)</p>
+                    <button type="submit" id="send_button" value="submit">send</button>
+                </form>
+            </div>
+        </section>
+
+
+
+        <footer>
+            <div class="footer_info">
+                <a href="#" class="footer_web_title">BestShop</a>
+                <p class="copyright">&copy 2020 BestShop LTD, All Rights Reserved</p>
+            </div>
+            <div class="social">
+                <a href="#"> <img src="./img/facebook.svg" alt="facebook"></a>
+                <a href="#"> <img src="./img/twitter.svg" alt="twitter"></a>
+
+            </div>
+
+
+        </footer>
+
+
+
     </div>
 </body>
 
